# rambo-gpu

./: .gitignore  CMakeLists.txt  main.cpp  rambo.h
gpu-testing/: CMakeLists.txt  README.md  benchmark.sh  check_gpu.sh  test.sh
gpu-testing/alpaka/: CMakeLists.txt  README.md  integrands.hpp  integrator.cpp  integrator.h  integrator.hpp  kernels.cpp  kernels.h  main.cpp  rambo_alpaka.cpp  rambo_alpaka.h  rambo_alpaka.hpp
gpu-testing/alpaka/cmake/: rambo-alpakaConfig.cmake.in
gpu-testing/alpaka/include/rambo/: integrands.hpp  integrator.hpp  phase_space.hpp  rambo.hpp
gpu-testing/base/: CMakeLists.txt  README.md  integrands.hpp  integrator.cpp  integrator.h  integrator.hpp  main.cpp  rambo.cpp  rambo.h  rambo_base.hpp  rng.cpp  rng.h
gpu-testing/base/cmake/: rambo-baseConfig.cmake.in
gpu-testing/base/include/rambo/: integrands.hpp  integrator.hpp  phase_space.hpp  rambo.hpp
gpu-testing/cuda/: CMakeLists.txt  README.md  integrands.cuh  integrator.cuh  main.cu  rambo.cu  rambo_cuda  rambo_cuda.cuh
gpu-testing/cuda/cmake/: rambo-cudaConfig.cmake.in
gpu-testing/cuda/include/rambo/: integrands.cuh  integrator.cuh  phase_space.cuh  rambo.cuh
gpu-testing/kokkos/: CMakeLists.txt  README.md  integrands.hpp  integrator.cpp  integrator.h  integrator.hpp  main.cpp  rambo_kokkos.cpp  rambo_kokkos.h  rambo_kokkos.hpp
gpu-testing/kokkos/cmake/: rambo-kokkosConfig.cmake.in
gpu-testing/kokkos/include/rambo/: integrands.hpp  integrator.hpp  phase_space.hpp  rambo.hpp
gpu-testing/omp/: CMakeLists.txt  README.md  integrator.cpp  integrator.h  main.cpp  omp_gpu_test.cpp  rambo_omp.cpp  rambo_omp.h  rng.h
gpu-testing/sycl/: CMakeLists.txt  README.md  integrands.hpp  integrator.hpp  main.cpp  rambo_sycl.hpp
gpu-testing/sycl/cmake/: rambo-syclConfig.cmake.in
gpu-testing/sycl/include/rambo/: integrands.hpp  integrator.hpp  phase_space.hpp  rambo.hpp
rambo_lib/: CMakeLists.txt  README.md
rambo_lib/cmake/: ramboConfig.cmake.in  ramboConfigVersion.cmake.in
